--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^16.1.1",
     "@angular/platform-browser-dynamic": "^16.1.1",
     "@angular/router": "^16.1.1",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
+    "font-awesome": "^4.7.0",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.4.0",
     "zone.js": "~0.13.1"
